--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,2 +1,64 @@
-<p>login works!</p>
-<div> {{"LOGIN.LOGIN_TITLE"  | translate}}</div>
+<div class="login-container">
+  <section class="vh-100">
+    <div class="container-fluid h-custom">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-md-9 col-lg-6 col-xl-5">
+          <img
+            src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
+            class="img-fluid"
+            alt="Sample image"
+          />
+        </div>
+        <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+          <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+            <!-- User name input -->
+            <div class="form-outline mb-4">
+              <label class="form-label" for="userName">{{
+                "LOGIN.USERNAME_LABEL" | translate
+              }}</label>
+              <input
+                type="text"
+                formControlName="loginId"
+                class="form-control"
+                placeholder="Enter User Name"
+                autofocus
+              />
+            </div>
+
+            <!-- Password input -->
+            <div class="form-outline mb-4">
+              <label class="form-label" for="password">{{
+                "LOGIN.PASSWORD_LABEL" | translate
+              }}</label>
+              <input
+                type="password"
+                formControlName="password"
+                class="form-control"
+                placeholder="Enter Password"
+              />
+            </div>
+
+            <div *ngIf="isValidationError" class="text-danger">{{ "LOGIN.VALIDATION_MSG" | translate }}</div>
+
+            <div class="text-center text-lg-start mt-4 pt-2">
+              <button
+                type="submit"
+                class="btn btn-primary btn-lg"
+              >
+                <span>{{ "LOGIN.LOGIN_LABEL" | translate }}</span>
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <div
+      class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary"
+    >
+      <!-- Copyright -->
+      <div class="text-white mb-3 mb-md-0">
+        Copyright © 2023. All rights reserved.
+      </div>
+    </div>
+  </section>
+</div>
