--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -57,7 +57,7 @@
     >
       <!-- Copyright -->
       <div class="text-white mb-3 mb-md-0">
-        Copyright © 2023. All rights reserved.
+        {{ "LOGIN.COPY_RIGHT" | translate }}
       </div>
     </div>
   </section>
