--- a/src/app/modules/dashboard/report/report.component.html
+++ b/src/app/modules/dashboard/report/report.component.html
@@ -1,1 +1,16 @@
- <p>report works!</p>
+<div class="container">
+  <div class="main-body">
+    <div class="row gutters-sm m-0 pt-3">
+      <div class="col-md-12 mb-3">
+        <h2>Report</h2>
+        <div class="card">
+          <div class="card-body">
+            <div class="d-flex flex-column align-items-center text-center">
+              <p>report works!</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
