--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -10,9 +10,7 @@
           />
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-          <h3>{{
-            "LOGIN.WELCOME" | translate
-          }}</h3>
+          <h3>{{ "LOGIN.WELCOME" | translate }}</h3>
           <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" novalidate>
             <!-- User name input -->
             <div class="form-outline mb-4">
@@ -31,7 +29,9 @@
               *ngIf="form['loginId'].touched && form['loginId'].invalid"
               class="alert alert-danger"
             >
-              <div *ngIf="form['loginId'].errors"> {{  "LOGIN.USERNAME" | translate}}</div>
+              <div *ngIf="form['loginId'].errors">
+                {{ "LOGIN.USERNAME" | translate }}
+              </div>
             </div>
 
             <!-- Password input -->
@@ -47,11 +47,13 @@
               />
             </div>
             <div
-            *ngIf="form['password'].touched && form['password'].invalid"
-            class="alert alert-danger"
-          >
-            <div *ngIf="form['password'].errors"> {{  "LOGIN.PASSWORD" | translate}}</div>
-          </div>
+              *ngIf="form['password'].touched && form['password'].invalid"
+              class="alert alert-danger"
+            >
+              <div *ngIf="form['password'].errors">
+                {{ "LOGIN.PASSWORD" | translate }}
+              </div>
+            </div>
 
             <div *ngIf="isValidationError" class="text-danger">
               {{ "LOGIN.VALIDATION_MSG" | translate }}
