--- a/src/app/shared/components/page-not-found/page-not-found.component.html
+++ b/src/app/shared/components/page-not-found/page-not-found.component.html
@@ -3,7 +3,11 @@
     <div class="card">
       <div class="card-body h-100 page-not-found">
         <div class="d-flex flex-column align-items-center text-center">
-          <img src="../../../../assets/image/404page.jpg" class="img-fluid" alt="Page not found">
+          <img
+            src="../../../../assets/image/404page.jpg"
+            class="img-fluid"
+            alt="Page not found"
+          />
         </div>
       </div>
     </div>
