--- a/src/app/modules/dashboard/user/user.component.html
+++ b/src/app/modules/dashboard/user/user.component.html
@@ -7,6 +7,7 @@
           <div class="card-body">
             <div class="d-flex flex-column align-items-center text-center">
               <div class="col-md-12">
+                <!-- Datatable section -->
                 <ngx-datatable
                   class="material"
                   [rows]="dataTable"
